# ProteinLoop

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.gemma-rocm.yml  docker-compose.horde.yml  docker-compose.public.yml  docker-compose.yml  goal.md
app/: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
deploy/: amd-gemma-vllm.md  digitalocean-uninstall.md  gemma-cpu.Dockerfile  live-demo.md  local-gemma.md  public-repo.md
notebooks/: ProteinLoop_AMD_Gemma_Verifier_Repair.ipynb
scripts/: amd_notebook_bootstrap.sh  amd_notebook_run_all.sh  amd_notebook_setup_vllm.sh  amd_notebook_upload_bundle.sh  build_amd_notebook_bundle.py  build_submission_bundle.py  capture_amd_notebook_evidence.py  configure_public_gemma.py  deploy_cpu_gemma.sh  deploy_digitalocean_public.sh  docker_smoke_test.py  export_lablab_form.py  export_slide_pdf.py  finalize_submission.py  generate_demo_evidence.py  generate_demo_rehearsal.py  generate_demo_video.py  generate_nrf9151_field_plan.py  generate_readiness_report.py  generate_submission_deck.mjs  generate_submission_deck_v2.mjs  horde_failover_test.py  import_amd_notebook_bundle.py  inspect_responsive_layout.mjs  local_gemma.py  nrf9151_live_capture.py  nrf9151_telemetry_bridge.py  presentation_layout_allowlist.json  publish_public_repo.py  (+14 more)
sim/: pyproject.toml
sim/proteinloop_sim/: __init__.py  __main__.py  actions.py  api.py  forecast.py  gemma_repair.py  gemma_search.py  policies.py  product_evaluation.py  rlvr.py  simulator.py  state.py  trace_summary.py  verifier.py
(+390 files in other folders)
